<resources>
    <string name="app_name">MoneyManager</string>
    <string name="logo_desc">app logo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="settings_splash">Settings screen!</string>
    <string name="nav_drawer_expenses">Расходы</string>
    <string name="nav_drawer_categories">Категории</string>
    <string name="nav_drawer_statistics">Статистика</string>
    <string name="nav_drawer_settings">Настройки</string>
    <string name="nav_drawer_exit">Выход</string>
    <string name="statistics_splash">Statistics screen!</string>
    <string name="user_name" translatable="false">Anton Martishkov</string>
    <string name="user_mail" translatable="false">my_mail@gmail.com</string>
    <string name="drawer_user_avatar_description">Avatarka</string>
    <string name="expenses_snackbar_message">snackbar in the expenses fragment!</string>
    <string name="categories_snackbar_message">snackbar in the categories fragment!</string>

    <!--AddExpenseActivity-->
    <string name="add_expenses_editText_expense">Введите сумму</string>
    <string name="add_expenses_editText_description">Введите описание покупки</string>
    <string name="add_expenses_editText_date">Введите дату покупки</string>
    <string name="btnCancel">Отмена</string>
    <string name="btnApply">Принять</string>
    <string name="spinner_title">Select Category</string>
    <string name="add_expense_apply_not_write">Не все поля заполнены!</string>
    <string name="apply_is_true">Сохранено</string>
    <string name="select_categories">Выберите категорию</string>
    <string name="search_title">Поиск</string>

    <!--RegistrationActivity-->
    <string name="registration_sign_up">Войти через аккаунт Google</string>
    <string name="registration">Регистрация</string>
    <string name="registration_login">Логин</string>
    <string name="registration_password">Пароль</string>
    <string name="wrong_login">Не верный логин</string>
    <string name="wrong_password">Не верный пароль</string>
    <string name="registration_length">Логин или пароль слишком короткие</string>
    <string name="registration_login_is_already_taken">Логин уже занят</string>
    <string name="registration_error">Ошибка</string>
    <string name="network_not_available">Нет соединения</string>
    <string name="enter_login">Введите Ваш логин</string>
    <string name="enter_password">Введите Ваш пароль</string>
    <string name="login_activity_btn">Подключиться</string>
    <string name="confirm_password">Повторите Ваш пароль</string>
    <string name="no_reg_text">Еще не зарегистрированы?</string>
    <string name="registration_succsess">Регистрация успешна</string>
    <string name="wrong_confirm">Пароли не одинаковые</string>

    <!--AddCategotyActivity-->
    <string name="add_category_hint">Имя новой категории</string>
    <string name="category_toast">Имя категории не может быть пустым</string>

    <!--Sync-->
    <string name="content_authority" translatable="false">com.whoami.moneytracker</string>
    <string name="sync_account_type" translatable="false">moneytracker.whoami.com</string>
    <string name="add_category">Добавить категорию</string>
    <string name="contextual_action_bar_title">Удаление</string>
    <string name="field_is_null">Имя не может быть null</string>
    <string name="no_added_category">Создайте категории</string>
    <string name="empty_expenses">Список трат пуст!</string>


    <!-- settingsFragment -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Уведомление синхронизации</string>
    <string name="pref_enable_notifications_true">Включено</string>
    <string name="pref_enable_notifications_false">Выключено</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <!-- for bar -->
    <string name="notification_message">Данные успешно синхронизированы!</string>
    <string name="pref_notification_section">Уведомления</string>

    <string name="pref_enable_sound_key" translatable="false">enable_notifications_sound</string>
    <string name="pref_enable_sound_label">Звук</string>

    <string name="pref_enable_vibrate_key" translatable="false">enable_notifications_vibrate</string>
    <string name="pref_enable_vibration_label">Вибрация</string>

    <string name="pref_enable_indicator_key" translatable="false">enable_notifications_indicator</string>
    <string name="pref_enable_indicator_label">Индикатор</string>

    <string name="pref_splash_screen">Заставка</string>
    <string name="logo_description">appLogo</string>

    <string name="pref_enable_foreground_notifications_key" translatable="false">enable_foreground_notifications</string>
    <string name="pref_enable_foreground_notifications_label">Foreground</string>

</resources>
