<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.PreferenceCategory

        android:title="@string/pref_notification_section">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_notifications_default"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:title="@string/pref_enable_notifications_label" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_notifications_default"
            android:dependency="@string/pref_enable_notifications_key"
            android:key="@string/pref_enable_sound_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:title="@string/pref_enable_sound_label" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_notifications_default"
            android:dependency="@string/pref_enable_notifications_key"
            android:key="@string/pref_enable_vibrate_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:title="@string/pref_enable_vibration_label" />
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_notifications_default"
            android:dependency="@string/pref_enable_notifications_key"
            android:key="@string/pref_enable_indicator_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:title="@string/pref_enable_indicator_label" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory

        android:title="@string/pref_splash_screen">
        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="@string/pref_enable_notifications_default"
            android:key="@string/pref_enable_notifications_key"
            android:summaryOff="@string/pref_enable_notifications_false"
            android:summaryOn="@string/pref_enable_notifications_true"
            android:title="@string/pref_splash_screen" />

    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>