<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_layout_height"
    android:background="@mipmap/pattern"
    android:orientation="vertical"
    android:paddingTop="@dimen/drawer_status_bar_height"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="@dimen/drawer_header_avatar_sizes"
        android:layout_height="@dimen/drawer_header_avatar_sizes"
        android:id="@+id/header_avatar"
        android:layout_margin="@dimen/drawer_header_spacing_large"
        android:src="@mipmap/avatar"
        android:contentDescription="@string/drawer_user_avatar_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header_username"
        android:layout_above="@+id/header_email"
        android:layout_marginLeft="@dimen/drawer_header_spacing_large"
        android:layout_marginStart="@dimen/drawer_header_spacing_large"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header_email"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/drawer_header_spacing_large"
        android:layout_marginStart="@dimen/drawer_header_spacing_large"
        android:layout_marginBottom="@dimen/drawer_header_spacing_large"
        android:text="@string/user_mail"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

</RelativeLayout>